// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing GifGrid should match snapshot with empty mocked data 1`] = `
<Fragment>
  <h3>
     
    Game of Thrones
     
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`testing GifGrid should show gifs loaded from useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    Game of Thrones
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="test title"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
